deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chachanagov-hm1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chachanagov-hm1-app
  template:
    metadata:
      labels:
        app: chachanagov-hm1-app
    spec:
      containers:
        - name: chachanagov-hm1
          image: temperror/otus-chachanagov-hm:1
          ports:
            - name: web
              containerPort: 8080
