service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chachanagov-hm1-service
spec:
  selector:
    app: chachanagov-hm1-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
