ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chachanagov-hm1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/sergey-chachanagov($|/)(.*)
            backend:
              serviceName: chachanagov-hm1-service
              servicePort: 8000
